plugins {
    id 'java'
    id 'application'
}

group = 'com.disha'
version = '1.0'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
}

test {
    useJUnitPlatform()
}

application {
    mainClass = '' 
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

test {
    jvmArgs += "--enable-preview"
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21) 
    }
}
